Fix: index h1 too large <400px screen sizes

--- a/styles/MastHead.module.css
+++ b/styles/MastHead.module.css
@@ -25,10 +25,9 @@
 	}
 }
 
-/* .fastText {
-	color: #0171bc;
+@media (max-width: 427px) {
+	.heading {
+		font-size: 1.2em;
+		width: 95%;
+	}
 }
-
-.secureText {
-	color: #fe0000;
-} */
